# dou

./: README.md  main.py  pyproject.toml
.cursor/skills/dou-create-node/: SKILL.md
src/dou/: __init__.py  pdf.py  pipeline.py
src/dou/crop/: __init__.py  config.py  crop_pdf.py  crop_pdf_params.py
src/dou/mask/: __init__.py  config.py  mask_pdf.py  mask_pdf_params.py
src/dou/nodes/: __init__.py  alinea_node.py  article_node.py  authority_node.py  inciso_node.py  item_node.py  list_node.py  ministries.py  ministry_node.py  nodes.py  nodes_list.py  normative_act_node.py  paragraph_node.py  section_header_node.py  table_node.py  text_node.py  types.py
src/dou/pdfs/: __init__.py  dou_greater_than_2001.py
